Fix: issue with properties list forcing content off screen

--- a/src/components/property-list/index.css
+++ b/src/components/property-list/index.css
@@ -2,18 +2,29 @@
     display: flex;
     flex-flow: wrap;
     gap: 5px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .property-wrapper {
     display: flex;
     align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     background-color: #2d2d2f;
     border: 1px solid #1b1919;
     flex-basis: calc(50% - 2.5px);
     padding: 10px 20px;
     flex: 1 auto;
+}
+
+.property-wrapper.large {
+    min-width: 100%;
+    max-width: none;
+}
+
+.property-wrapper.health {
+  max-width: 160px;
 }
 
 .property-key-wrapper {
@@ -25,10 +36,17 @@
     font-weight: 600;
 }
 
+.property-wrapper .item {
+  white-space: normal;
+}
+.property-wrapper .item p {
+    margin: 0;
+}
+
 
 @media screen and (min-width: 800px) {
     .property-wrapper {
-        flex-basis: 10%;
+/*        flex-basis: 10%; */
         white-space: nowrap;
     }
 }
