--- a/src/pages/boss/index.css
+++ b/src/pages/boss/index.css
@@ -78,6 +78,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 auto;
+    max-width: 850px;
 }
 .boss-top-content .title-bar {
     display: flex;
